...
) {
    val exchangeRateDateText = remember(state.exchangeRateDate) {
        state.exchangeRateDate.takeIf { it.isNotBlank() }?.let(::formatExchangeRateDate)
    }

    Scaffold(
        modifier = Modifier.testTag("screen.exchange"),
        snackbarHost = {
            CustomSnackbarHost(snackbarHostState = snackbarHostState)
        },
        topBar = { ExchangeTopBar() },
        bottomBar = {
            AdMobBanner(
...
