...
    favoriteState: FavoriteContract.State,
    canRequestAds: Boolean = false,
    onExchangeIntent: (ExchangeContract.Intent) -> Unit,
    snackbarHostState: SnackbarHostState = remember { SnackbarHostState() },
) {
    Scaffold(
        modifier = Modifier.testTag("screen.favorite"),
        snackbarHost = { CustomSnackbarHost(snackbarHostState = snackbarHostState) },
        topBar = { FavoriteTopBar() },
        bottomBar = {
            AdMobBanner(
                adUnitIdResId = R.string.admob_favorite_banner_id,
                canRequestAds = canRequestAds,
...
