...
    snackbarHostState: SnackbarHostState = remember { SnackbarHostState() },
    onThemeModeSelected: (ThemeMode) -> Unit = {},
    onPrivacyPolicyClick: () -> Unit = {},
    onPrivacyOptionsClick: () -> Unit = {},
) {
    Scaffold(
        modifier = modifier.testTag("screen.setting"),
        snackbarHost = {
            CustomSnackbarHost(snackbarHostState = snackbarHostState)
        },
        bottomBar = {
            AdMobBanner(
                adUnitIdResId = R.string.admob_settings_banner_id,
...
